# WebServer

./: CMakeLists.txt
code/: main.cpp
code/http/: httprequest.cpp
code/pool/: sqlconnpool.cpp
code/server/: webserver.cpp  webserver.h
